# IPCCH

./: .gitignore  AGENTS.md  CLAUDE.md  Figure_percentage_a_experiencing_p4.ipynb  TODO.txt  Table1_Forecasting_main_6months.ipynb  Table1_Forecasting_main_cleanlab.ipynb  Table1_Forecasting_main_separate_CH.ipynb  Table1_Forecasting_main_separate_IPC.ipynb  Table1_Forecasting_main_withlag.ipynb  Table1_Forecasting_main_withlag_NGA.ipynb  Table1_Nowcasting_two_layer.ipynb  Temp_results.txt  area_id_country_region_mapping.csv  cleanlab_label_analysis.py  contemporaneous_hyperparameters.json  contemporaneous_hyperparameters_p3.json  data_integrity_note.txt  food_crisis_functions.py  forecasting_hyperparameters.json  forecasting_hyperparameters_p3.json  ipc_error_analysis.py  pyproject.toml  run_region_models.py
.claude/: settings.local.json
.specify/: extensions.yml  feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/presets/: .registry
cleanlab_experiment/: cleanlab_label_quality_summary_report.txt
configs/: paths.example.json
country_performance_experiment/: country_performance_all.csv  country_performance_poor.csv  poor_performing_countries.txt
doc/: IPCCH.drawio
docs/: README_run_region_models.md  experiment_0_canonical_forecast_diagnostics.md  launch_nowcasting_2026_04.md
global_vs_region_scripts/: compare_global_vs_regional_by_region.py
main_results/: Test_results.txt
preprocess_scripts/: area_id_country_table.ipynb
tests/: conftest.py
(+280 files in other folders)
