[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ipcch"
version = "0.1.0"
description = "IPC/CH food crisis forecasting utilities"
requires-python = ">=3.9"

[project.optional-dependencies]
shap = ["shap"]

[tool.setuptools.packages.find]
where = ["src"]
